--- a/branches/0.4.5/language/doublecmd.hu.po
+++ b/branches/0.4.5/language/doublecmd.hu.po
@@ -292,15 +292,15 @@ msgstr "&Oké"
 #: TFRMCHECKSUMCALC.CAPTION
 msgctxt "TFRMCHECKSUMCALC.CAPTION"
 msgid "Calculate check sum..."
-msgstr ""
+msgstr "Ellenőrző összeg számítása"
 
 #: TFRMCHECKSUMCALC.CBSEPARATEFILE.CAPTION
 msgid "Create separate MD5/SHA1 files for each file"
-msgstr ""
+msgstr "Külön MD5/SHA1 fájlonként"
 
 #: TFRMCHECKSUMCALC.LBLSAVETO.CAPTION
 msgid "Save check sum file(s) to:"
-msgstr ""
+msgstr "Ellenőrzőösszegek mentése:"
 
 #: TFRMCOLUMSPROPS.BITBTN1.CAPTION
 msgid "&ОК"
@@ -378,12 +378,12 @@ msgstr "&Súgó"
 
 #: TFRMCONFIGTOOLBAR.BTNINSERTBUTTON.CAPTION
 msgid "Insert"
-msgstr ""
+msgstr "Beszúrás"
 
 #: TFRMCONFIGTOOLBAR.BTNOK.CAPTION
 msgctxt "TFRMCONFIGTOOLBAR.BTNOK.CAPTION"
 msgid "OK"
-msgstr "Oké"
+msgstr "OK"
 
 #: TFRMCONFIGTOOLBAR.BTNOPENBARFILE.CAPTION
 msgctxt "TFRMCONFIGTOOLBAR.BTNOPENBARFILE.CAPTION"
@@ -1453,7 +1453,7 @@ msgstr "&Másolás"
 
 #: TFRMMAIN.ACTCOUNTDIRCONTENT.CAPTION
 msgid "Sho&w occupied space"
-msgstr ""
+msgstr "Elfoglalt hely megjelenítése"
 
 #: TFRMMAIN.ACTCUTTOCLIPBOARD.CAPTION
 msgid "Cu&t"
@@ -1536,7 +1536,7 @@ msgstr "Billentyűzet"
 
 #: TFRMMAIN.ACTLEFTEQUALRIGHT.CAPTION
 msgid "Left &= Right"
-msgstr ""
+msgstr "Bal &= Jobb"
 
 #: TFRMMAIN.ACTLEFTOPENDRIVES.CAPTION
 msgid "Open left drive list"
@@ -1572,7 +1572,7 @@ msgstr "Összes kijelölés megszüntetése"
 
 #: TFRMMAIN.ACTMINIMIZE.CAPTION
 msgid "Minimize window"
-msgstr ""
+msgstr "Kis méret"
 
 #: TFRMMAIN.ACTMULTIRENAME.CAPTION
 msgid "Multi Rename Tool"
@@ -1646,7 +1646,7 @@ msgstr "Áthely/Átnev. F6"
 
 #: TFRMMAIN.ACTRENAMENOASK.CAPTION
 msgid "Move/Rename files without asking for confirmation"
-msgstr ""
+msgstr "Fájlok mozgatása/átnevezése megerősítő kérdés nélkül"
 
 #: TFRMMAIN.ACTRENAMEONLY.CAPTION
 msgctxt "TFRMMAIN.ACTRENAMEONLY.CAPTION"
@@ -1659,7 +1659,7 @@ msgstr "Fordított sorrend"
 
 #: TFRMMAIN.ACTRIGHTEQUALLEFT.CAPTION
 msgid "Right &= Left"
-msgstr ""
+msgstr "Jobb &= Bal"
 
 #: TFRMMAIN.ACTRIGHTOPENDRIVES.CAPTION
 msgid "Open right drive list"
@@ -1696,7 +1696,7 @@ msgstr "Rendezés attribútumok szerint"
 
 #: TFRMMAIN.ACTSORTBYCOLUMN.CAPTION
 msgid "Sort by column"
-msgstr ""
+msgstr "Rendezés oszlop szerint"
 
 #: TFRMMAIN.ACTSORTBYDATE.CAPTION
 msgid "Sort by date"
@@ -1733,11 +1733,11 @@ msgstr "Fül zárolása"
 
 #: TFRMMAIN.ACTTRANSFERLEFT.CAPTION
 msgid "Transfer dir under cursor to left window"
-msgstr ""
+msgstr "Kurzor alatti mappa küldése a bal ablakba"
 
 #: TFRMMAIN.ACTTRANSFERRIGHT.CAPTION
 msgid "Transfer dir under cursor to right window"
-msgstr ""
+msgstr "Kurzor alatti mappa küldése a jobb ablakba"
 
 #: TFRMMAIN.ACTUNMARKCURRENTEXTENSION.CAPTION
 msgid "Unselect all with same extension"
@@ -1783,7 +1783,7 @@ msgstr ""
 
 #: TFRMMAIN.BTNLEFTHOME.HINT
 msgid "Go to home directory"
-msgstr ""
+msgstr "Ugrás a saját mappába"
 
 #: TFRMMAIN.BTNLEFTROOT.CAPTION
 msgctxt "TFRMMAIN.BTNLEFTROOT.CAPTION"
@@ -1792,7 +1792,7 @@ msgstr ""
 
 #: TFRMMAIN.BTNLEFTROOT.HINT
 msgid "Go to root directory"
-msgstr ""
+msgstr "Ugrás a gyökérkönyvtárba"
 
 #: TFRMMAIN.BTNLEFTUP.CAPTION
 msgctxt "TFRMMAIN.BTNLEFTUP.CAPTION"
@@ -1801,7 +1801,7 @@ msgstr ""
 
 #: TFRMMAIN.BTNLEFTUP.HINT
 msgid "Go to parent directory"
-msgstr ""
+msgstr "Ugrás a szülőkönyvtárba"
 
 #: TFRMMAIN.BTNRIGHTDIRECTORYHOTLIST.CAPTION
 msgctxt "TFRMMAIN.BTNRIGHTDIRECTORYHOTLIST.CAPTION"
@@ -1984,7 +1984,7 @@ msgstr ""
 
 #: TFRMMAIN.MILOGCLEAR.CAPTION
 msgid "Clear"
-msgstr ""
+msgstr "Ürítés"
 
 #: TFRMMAIN.MILOGCOPY.CAPTION
 msgctxt "TFRMMAIN.MILOGCOPY.CAPTION"
@@ -1993,7 +1993,7 @@ msgstr "Másolás"
 
 #: TFRMMAIN.MILOGHIDE.CAPTION
 msgid "Hide"
-msgstr ""
+msgstr "Elrejtés"
 
 #: TFRMMAIN.MILOGSELECTALL.CAPTION
 msgctxt "TFRMMAIN.MILOGSELECTALL.CAPTION"
@@ -2016,7 +2016,7 @@ msgstr "Kilépés"
 
 #: TFRMMAIN.MITRAYICONRESTORE.CAPTION
 msgid "Restore"
-msgstr ""
+msgstr "Visszaállítás"
 
 #: TFRMMAIN.MNUCMD.CAPTION
 msgid "&Commands"
@@ -2099,7 +2099,7 @@ msgstr ""
 
 #: TFRMMULTIRENAME.BTNLOADPRESET.CAPTION
 msgid "&Load"
-msgstr ""
+msgstr "Betö&ltés"
 
 #: TFRMMULTIRENAME.BTNNAMEMENU.CAPTION
 msgctxt "TFRMMULTIRENAME.BTNNAMEMENU.CAPTION"
@@ -2108,7 +2108,7 @@ msgstr ""
 
 #: TFRMMULTIRENAME.BTNRENAME.CAPTION
 msgid "&Rename"
-msgstr ""
+msgstr "Átnevezés (&R)"
 
 #: TFRMMULTIRENAME.BTNRESTORE.CAPTION
 #, fuzzy
@@ -2159,7 +2159,7 @@ msgstr ""
 
 #: TFRMMULTIRENAME.EXTENSION.CAPTION
 msgid "[E]xtension"
-msgstr ""
+msgstr "Kit[E]rjesztés"
 
 #: TFRMMULTIRENAME.GBCOUNTER.CAPTION
 msgid "Counter"
@@ -2232,43 +2232,43 @@ msgstr "Fájl útvonal"
 
 #: TFRMMULTIRENAME.MICOUNTER.CAPTION
 msgid "[C]ounter"
-msgstr ""
+msgstr "Számláló [C]"
 
 #: TFRMMULTIRENAME.MIDAY.CAPTION
 msgid "[D]ay"
-msgstr ""
+msgstr "Nap [D]"
 
 #: TFRMMULTIRENAME.MIEXTENSIONX.CAPTION
 msgid "[Ex]xtension"
-msgstr ""
+msgstr "Kiterjesztés [Ex]"
 
 #: TFRMMULTIRENAME.MIEXTENSIONXX.CAPTION
 msgid "[Ex:x]xtension"
-msgstr ""
+msgstr "Kiterjesztés [Ex:x]"
 
 #: TFRMMULTIRENAME.MIHOUR.CAPTION
 msgid "[h]our"
-msgstr ""
+msgstr "Óra [h]"
 
 #: TFRMMULTIRENAME.MIMINUTE.CAPTION
 msgid "Mi[n]ute"
-msgstr ""
+msgstr "Perc [n]"
 
 #: TFRMMULTIRENAME.MIMONTH.CAPTION
 msgid "[M]onth"
-msgstr ""
+msgstr "Hónap [M]"
 
 #: TFRMMULTIRENAME.MINAME.CAPTION
 msgid "[N]ame"
-msgstr ""
+msgstr "[N]év"
 
 #: TFRMMULTIRENAME.MINAMEX.CAPTION
 msgid "[Nx]ame"
-msgstr ""
+msgstr "Név [Nx]"
 
 #: TFRMMULTIRENAME.MINAMEXX.CAPTION
 msgid "[Nx:x]ame"
-msgstr ""
+msgstr "Név [Nx:x]"
 
 #: TFRMMULTIRENAME.MINEXT.CAPTION
 msgid "Time..."
@@ -2284,11 +2284,11 @@ msgstr "Név..."
 
 #: TFRMMULTIRENAME.MISECOND.CAPTION
 msgid "[s]econd"
-msgstr ""
+msgstr "Má[s]odperc"
 
 #: TFRMMULTIRENAME.MIYEAR.CAPTION
 msgid "[Y]ear"
-msgstr ""
+msgstr "Év [Y]"
 
 #: TFRMMULTIRENAME.N1.CAPTION
 msgctxt "TFRMMULTIRENAME.N1.CAPTION"
@@ -2430,7 +2430,7 @@ msgstr "Eltávolítás"
 
 #: TFRMOPTIONS.BTNSEARCHTEMPLATE.HINT
 msgid "Template..."
-msgstr ""
+msgstr "Sablon..."
 
 #: TFRMOPTIONS.BTNSELEDITFNT.CAPTION
 msgctxt "TFRMOPTIONS.BTNSELEDITFNT.CAPTION"
@@ -2490,11 +2490,11 @@ msgstr "Szöveg vágása az oszlop szélességéhez"
 
 #: TFRMOPTIONS.CBDELETETOTRASH.CAPTION
 msgid "&F8/Del deletes to recycle bin (Shift=directly)"
-msgstr ""
+msgstr "&F8/Del gomb a Kukába helyez (Shifttel együtt töröl)"
 
 #: TFRMOPTIONS.CBDIRBRACKETS.CAPTION
 msgid "Show square brackets around directories"
-msgstr ""
+msgstr "Szögletes zárójel a könyvtárnevek körül"
 
 #: TFRMOPTIONS.CBDIRHISTORY.CAPTION
 msgctxt "TFRMOPTIONS.CBDIRHISTORY.CAPTION"
@@ -2520,7 +2520,7 @@ msgstr "&Végződés (a . előtti utolsó karakterrel kell egyeznie)"
 
 #: TFRMOPTIONS.CBEXTDIFFER.CAPTION
 msgid "External differ"
-msgstr "Külső differ"
+msgstr "Külső összehasonlító"
 
 #: TFRMOPTIONS.CBEXTEDITOR.CAPTION
 msgid "External editor"
@@ -2537,7 +2537,7 @@ msgstr "Fájlmaszk előzmények"
 #: TFRMOPTIONS.CBFLATDISKPANEL.CAPTION
 msgctxt "TFRMOPTIONS.CBFLATDISKPANEL.CAPTION"
 msgid "Flat buttons"
-msgstr ""
+msgstr "Lapos lemez gombsor"
 
 #: TFRMOPTIONS.CBFLATINTERFACE.CAPTION
 msgid "Flat interface"
@@ -2639,7 +2639,7 @@ msgstr "Aktuális &könyvtár megjelenítése"
 
 #: TFRMOPTIONS.CBSHOWDIALOGONDRAGDROP.CAPTION
 msgid "Show confirmation dialog on drag&&drop operations"
-msgstr ""
+msgstr "Megerősítő kérdés a fogd és vidd műveleteknél"
 
 #: TFRMOPTIONS.CBSHOWDISKPANEL.CAPTION
 msgid "Show &drive buttons"
@@ -2688,11 +2688,11 @@ msgstr ""
 
 #: TFRMOPTIONS.CBSPACEMOVESDOWN.CAPTION
 msgid "When selecting files with <SPACEBAR>, move down to next file (as with <INSERT>)"
-msgstr ""
+msgstr "Szóközzel történő kijelöléskor automatikus léptetés (mint <INSERT> estén)"
 
 #: TFRMOPTIONS.CBTABSACTIVATEONCLICK.CAPTION
 msgid "Activate target &panel when clicking on one of its Tabs"
-msgstr ""
+msgstr "A fülre kattintva a hozzá tartozó panel aktiválása"
 
 #: TFRMOPTIONS.CBTABSALWAYSVISIBLE.CAPTION
 msgid "&Show tab header also when there is only one tab"
@@ -2720,7 +2720,7 @@ msgstr "CTRL-Fel új fület nyit az előtérben"
 
 #: TFRMOPTIONS.CBTABSSHOWCLOSEBUTTON.CAPTION
 msgid "Show tab close button"
-msgstr ""
+msgstr "Fül bezárása gombok megjelenítése"
 
 #: TFRMOPTIONS.CBTERMWINDOW.CAPTION
 msgid "Show terminal window"
@@ -2732,19 +2732,19 @@ msgstr "Két meghajtó gombsor megjelenítése (fix szélességben, az ablakok f
 
 #: TFRMOPTIONS.CBWATCHATTRIBUTESCHANGE.CAPTION
 msgid "Also when &size, date, or attributes change"
-msgstr ""
+msgstr "Méret, dátum vagy attribútum változása esetén is"
 
 #: TFRMOPTIONS.CBWATCHFILECOUNT.CAPTION
 msgid "Update &footer (total number of files)"
-msgstr ""
+msgstr "Lábléc (fájlok száma) frissítése"
 
 #: TFRMOPTIONS.CBWATCHFILENAMECHANGE.CAPTION
 msgid "Refresh when files are &created, deleted and renamed"
-msgstr ""
+msgstr "Frissítés fájlok létrehozása, törlése és átnevezése esetén"
 
 #: TFRMOPTIONS.CBWATCHFREESPACE.CAPTION
 msgid "Update &header (free disk space)"
-msgstr ""
+msgstr "Fejléc (szabad hely) frissítése"
 
 #: TFRMOPTIONS.CBWATCHONLYFOREGROUND.CAPTION
 msgid "Don't &react to updates while in the background"
@@ -2757,7 +2757,7 @@ msgstr "Szövegszín"
 
 #: TFRMOPTIONS.GBAUTOREFRESH.CAPTION
 msgid "Auto-Refresh when the file system changes"
-msgstr ""
+msgstr "Automatikus frissítés a fájlrendszer változásakor"
 
 #: TFRMOPTIONS.GBCOPYBUFFERSIZE.CAPTION
 msgid "&Buffer size for files:"
@@ -2830,11 +2830,11 @@ msgstr "Parancsok:"
 
 #: TFRMOPTIONS.LBFILTER.CAPTION
 msgid "Filter"
-msgstr ""
+msgstr "Szűrő"
 
 #: TFRMOPTIONS.LBHOTKEYS.CAPTION
 msgid "Hot Keys"
-msgstr ""
+msgstr "Gyorsbillentyűk"
 
 #: TFRMOPTIONS.LBLBACKGROUND2.CAPTION
 msgctxt "TFRMOPTIONS.LBLBACKGROUND2.CAPTION"
@@ -2930,7 +2930,7 @@ msgstr "Nézőke betűtípus"
 
 #: TFRMOPTIONS.LBLWATCHEXCLUDEDRIVES.CAPTION
 msgid "No refresh for &these drives:"
-msgstr ""
+msgstr "Ne frissítse ezeket a meghajtókat:"
 
 #: TFRMOPTIONS.LBLWCXDESCRIPTION.CAPTION
 msgid "Packer plugins are used to work with archives."
@@ -3371,7 +3371,7 @@ msgstr "Keresés"
 
 #: TFRMVIEWER.MISEARCHNEXT.CAPTION
 msgid "Search next"
-msgstr ""
+msgstr "Következő"
 
 #: TFRMVIEWER.MISELECTALL.CAPTION
 msgctxt "TFRMVIEWER.MISELECTALL.CAPTION"
@@ -3493,7 +3493,7 @@ msgstr ""
 #: ulng.rsdlgchecksumverify
 msgctxt "ulng.rsdlgchecksumverify"
 msgid "Verify check sum..."
-msgstr ""
+msgstr "Ellenőrző összeg vizsgálata..."
 
 #: ulng.rsdlgcp
 msgctxt "ulng.rsdlgcp"
@@ -3571,15 +3571,15 @@ msgstr "A %s könyvtár nem létezik!"
 
 #: ulng.rsfindfound
 msgid "Found: %d"
-msgstr ""
+msgstr "Találat: %d"
 
 #: ulng.rsfindsavetemplatecaption
 msgid "Save search template"
-msgstr ""
+msgstr "Keresési sablon mentése"
 
 #: ulng.rsfindsavetemplatetitle
 msgid "Template name:"
-msgstr ""
+msgstr "Sablon neve:"
 
 #: ulng.rsfindscanned
 msgctxt "ulng.rsfindscanned"
@@ -3588,7 +3588,7 @@ msgstr "Végignézve: %d"
 
 #: ulng.rsfindscanning
 msgid "Scanning"
-msgstr ""
+msgstr "Keresés"
 
 #: ulng.rsfindwherebeg
 msgid "Begin at"
@@ -3604,7 +3604,7 @@ msgstr "Hiba a hardlink létrehozásakor."
 
 #: ulng.rslinkmsgok
 msgid "Linker complete"
-msgstr ""
+msgstr "Linker végzett"
 
 #: ulng.rsmarkminus
 msgid "Unselect mask"
@@ -3663,7 +3663,7 @@ msgstr "Eltávolítja az összes inaktív fület?"
 
 #: ulng.rsmsgcloselockedtab
 msgid "This tab (%s) is locked! Close anyway?"
-msgstr ""
+msgstr "Ez a fül (%s) zárolt! Mégis bezárja?"
 
 #: ulng.rsmsgcpfldr
 msgid "Copy %d selected files/directories?"
@@ -3679,7 +3679,7 @@ msgstr "%d kiválasztott fájl/könyvtár törlése?"
 
 #: ulng.rsmsgdelfldrt
 msgid "Delete %d selected files/directories into trash can?"
-msgstr ""
+msgstr "A kijelölt %d fájlt/mappát a Kukába helyezi?"
 
 #: ulng.rsmsgdelsel
 msgid "Delete selected \"%s\"?"
@@ -3687,7 +3687,7 @@ msgstr "\"%s\" törlése?"
 
 #: ulng.rsmsgdelselt
 msgid "Delete selected \"%s\" into trash can?"
-msgstr ""
+msgstr "A kijelölt \"%s\" Kukába helyezi?"
 
 #: ulng.rsmsgdisknotavail
 msgid "Disk is not available"
@@ -3711,7 +3711,7 @@ msgstr "Hibás adat"
 
 #: ulng.rsmsgerrcannotcopyfile
 msgid "Cannot copy file %s to %s"
-msgstr ""
+msgstr "Nem tudom %s fájlt ide másolni: %s"
 
 #: ulng.rsmsgerrdirexists
 msgid "Directory %s exists!"
@@ -3723,7 +3723,7 @@ msgstr "A műveletet a felhasználó megszakította"
 
 #: ulng.rsmsgerreclose
 msgid "Error closing file"
-msgstr "Hiba a fájé bezárásakor"
+msgstr "Hiba a fájl bezárásakor"
 
 #: ulng.rsmsgerrecreate
 msgid "Cannot create file"
@@ -3763,11 +3763,11 @@ msgstr "A művelet nem támogatott!"
 
 #: ulng.rsmsgerrregexpsyntax
 msgid "Syntax error in regular expression!"
-msgstr ""
+msgstr "Szintaktikai hiba a reguláris kifejezésben!"
 
 #: ulng.rsmsgerrrename
 msgid "Cannot rename file %s to %s"
-msgstr ""
+msgstr "Nem tudom a %s fájlt %s névre változtatni"
 
 #: ulng.rsmsgerrsmallbuf
 msgid "Buffer too small"
@@ -3799,11 +3799,11 @@ msgstr "A \"%s\" symlink követése?"
 
 #: ulng.rsmsginvalidfilename
 msgid "Invalid filename"
-msgstr ""
+msgstr "Érvénytelen fájlnév"
 
 #: ulng.rsmsginvalidselection
 msgid "Invalid selection."
-msgstr ""
+msgstr "Érvénytelen kijelölés"
 
 #: ulng.rsmsglogcopy
 msgid "Copy file %s"
@@ -3823,7 +3823,7 @@ msgstr "%s kitömörítése"
 
 #: ulng.rsmsgloginfo
 msgid "Info: "
-msgstr ""
+msgstr "Infó: "
 
 #: ulng.rsmsgloglink
 msgid "Create link %s"
@@ -3863,7 +3863,7 @@ msgstr ""
 
 #: ulng.rsmsgmanualhotdirquery
 msgid "Enter name and path (format name=path):"
-msgstr ""
+msgstr "Add meg a nevez és az útvonalat név=útv. formában:"
 
 #: ulng.rsmsgnewfile
 msgid "New file"
@@ -3875,7 +3875,7 @@ msgstr "A következő darab kicsomagolása következik"
 
 #: ulng.rsmsgnofilesselected
 msgid "No files selected."
-msgstr ""
+msgstr "Nincsenek kijelölt fájlok."
 
 #: ulng.rsmsgnofreespacecont
 msgid "No enough free space on target drive, Continue?"
@@ -3891,7 +3891,7 @@ msgstr "Nem lehet törölni a %s fájlt"
 
 #: ulng.rsmsgnotimplemented
 msgid "Not implemented."
-msgstr ""
+msgstr "Nincs leprogramozva."
 
 #: ulng.rsmsgpopuphotadd
 msgid "&Add %s"
@@ -3927,7 +3927,7 @@ msgstr ""
 
 #: ulng.rsmsgselectonlychecksumfiles
 msgid "Please select only check sum files!"
-msgstr ""
+msgstr "Kérem csak ellenőrzőösszeg-fájlokat jelölön ki!"
 
 #: ulng.rsmsgsellocnextvol
 msgid "Please select location of next volume"
@@ -3939,7 +3939,7 @@ msgstr "Kötetcimke beállítása"
 
 #: ulng.rsmsgtoomanyfilesselected
 msgid "Too many files selected."
-msgstr ""
+msgstr "Túl sok fájl van kijelölve."
 
 #: ulng.rsmsgvolumelabel
 msgid "Volume label:"
@@ -3965,7 +3965,7 @@ msgstr "A \"%s\" beépülő társítása ezzel:"
 
 #: ulng.rsoptautorefresh
 msgid "Auto refresh"
-msgstr ""
+msgstr "Automatikus frissítés"
 
 #: ulng.rsoptbehav
 msgid "Behaviors"
@@ -3998,23 +3998,23 @@ msgstr "Kiterjesztés megadása"
 
 #: ulng.rsoptexamplecursor
 msgid "Cursor"
-msgstr ""
+msgstr "Kurzor"
 
 #: ulng.rsoptexamplemark
 msgid "Mark"
-msgstr ""
+msgstr "Kijelölés"
 
 #: ulng.rsoptexamplemarkcursor
 msgid "Mark + Cursor"
-msgstr ""
+msgstr "Kijelölés +  kurzor"
 
 #: ulng.rsoptexampletext
 msgid "Text"
-msgstr ""
+msgstr "Szöveg"
 
 #: ulng.rsoptfileop
 msgid "File operations"
-msgstr "Fájl műveletek"
+msgstr "Fájlműveletek"
 
 #: ulng.rsoptfilepanels
 msgid "File panels"
@@ -4090,11 +4090,11 @@ msgstr "Pozíció mentve."
 
 #: ulng.rspropserrchmod
 msgid "Can not change access rights for \"%s\""
-msgstr ""
+msgstr "\"%s\" jogosultsága nem állítható"
 
 #: ulng.rspropserrchown
 msgid "Can not change owner for \"%s\""
-msgstr ""
+msgstr "\"%s\" tulajdonosa nem állítható"
 
 #: ulng.rspropsfile
 msgid "File"
@@ -4177,7 +4177,7 @@ msgstr "Elkészült:"
 
 #: ulng.rssplitmsgmanyparts
 msgid "The number of parts is more than 100! Continue?"
-msgstr ""
+msgstr "A darabok száma több mint 100! Folytassam?"
 
 #: ulng.rssplitmsgsize
 msgid "size:"
